# value-bet-system

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml
docs/: architecture.md  backtesting-protocol.md  data-lineage.md  data-model.md  limitations.md  roadmap.md
docs/adr/: 0001-evaluation-hierarchy.md  0002-v1-targets-efficient-core.md  0003-v1-data-sources.md  0004-free-first-forward-only-clv.md  0005-generative-score-distribution-baseline.md  0006-baseline-time-weighted-poisson-not-dixon-coles.md  0007-evaluation-and-walk-forward-protocol.md
reports/: m1_calibration.md  m1_data_coverage.md  m1_features.md  m1_results.md
src/goalline/: __init__.py  markets.py
src/goalline/data/: __init__.py  cli.py  clubelo.py  coverage.py  fetch.py  ingest.py  quality.py  schema.py  sources.py
src/goalline/eval/: __init__.py  calibrate.py  devig.py  metrics.py  run_calibration.py  run_features.py  run_m1.py  walkforward.py
src/goalline/model/: __init__.py  calibration.py  poisson.py
tests/: test_calibration.py  test_clubelo.py  test_devig.py  test_ingest.py  test_markets.py  test_metrics.py  test_poisson.py  test_quality.py
